# logkontrol

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: workflow.yml
env/: pyvenv.cfg
logkontrol/: __init__.py  log_kontrol.py  logkontrol.py
tests/: test_init_logging.py  test_initialize_log_file.py  test_load_logging_config.py  test_log_function_call.py  test_log_json_content.py  test_log_message.py  test_log_variable.py  test_placeholder.py  test_truncate_string.py
