[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logkontrol"
version = "0.1.0"
authors = [
    { name = "voidfemme", email = "rosemkatt@gmail.com" }
]
description = "Custom file logging system for Python applications"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent"
]
dependencies = [
    "PyYAML"
]
license = { text = "CC0 1.0 Universal (CC0 1.0) Public Domain Dedication" }

[project.urls]
Homepage = "https://github.com/voidfemme/logkontrol"
Bug_Tracker = "https://github.com/voidfemme/logkontrol/issues"

